--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,5 +1,4 @@
 * {
-    
     margin: 0;
     padding: 0;
 }
@@ -9,23 +8,23 @@
     height: 100vh;
     margin: 0 auto;
     
-    }
+}
 .main_page {
     min-height: 100vh;
     background: url('./components/img/main_bg_1.png') center center/cover no-repeat;
+    margin-top: 0;
     z-index: -1;
 }
 .navbar {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 25vh;
+    height: 15vh;
     width: 100vw;
 }
 
 .main_btn {
     height: 35px;
-    /* margin-top: 55px; */
     font-size: 2vw;
     font-weight: 700;
     color: #000000;
@@ -41,23 +40,23 @@
     transform: scale(1.2) ;
 }
 .div_logo {
-    height: inherit;
+    height: 15vh;
     width: 18%;
-    background: url('./components/img/KMA_Logo.png') ;
+    background: url('./components/img/KMA_Logo.png') center center/cover no-repeat;
 }
-/*
-.main_page, .main_header {
-    margin-top: 5vh;
+
+.main_page .main_header {
+    margin-top: 15vh;
     text-align: center;
     font-family: Arial;
     font-size: 24px;
 }
-.main_page, .main_btn_2 {
+.main_page .main_btn_2 {
     display: flex;
     justify-content: space-around;
     margin-top: 86px;
 }
-.main_page, .main_btn_2, .main_cold {
+.main_page .main_btn_2 .main_cold {
     font-family: Arial;
     font-size: 36px;
     width: 432px;
@@ -66,10 +65,10 @@
     height: 58px;
     color: #000000;
     text-align: center;
-    background: #FC5252;
+    background: #7ef0f8;
     cursor: pointer;
 }
-.main_page, .main_btn_2, .main_hot {
+.main_page .main_btn_2 .main_hot {
     font-family: Arial;
     font-size: 36px;
     width: 432px;
@@ -78,15 +77,25 @@
     height: 58px;
     color: #000000;
     text-align: center;
-    background: #FC5252;
+    background: #7ef0f8;
     cursor: pointer;
 }
-.main_page, .logo_simpac_jnh {
+.main_page .logo_sj {
     display: flex;
     justify-content: space-around;
     margin-top: 36px;
 }
-.main_page, .contacts {
+.main_page .logo_simpac {
+    height: 10vh;
+    width: 15vw;
+    background: url('./components/img/sipaclogo.png') center center/contain no-repeat
+}
+.main_page .logo_jhg {
+    height: 10vh;
+    width: 15vw;
+    background: url('./components/img/jnhlogo.png') center center/contain no-repeat
+}
+.main_page .contacts {
     display: flex;
     justify-content: space-around;
     margin-top: 24px;
@@ -94,11 +103,12 @@
     font-weight: 500;
 }
 .second_page {
+    position: relative;
     min-height: 950px;
     background: url('./components/img/2.png') center center/cover no-repeat;
     z-index: -1;
 }
-.second_page, .second_head {
+.second_page .second_head {
     position: absolute;
     width: 265px;
     height: 55px;
@@ -111,38 +121,39 @@
     color: #000000;
     text-decoration: underline;
 }
-.second_page, .second_text_1 {
+.second_page .second_text_1 {
     position: absolute;
     width: 812px;
     height: 218px;
     left: 78px;
     top: 277px;
     font-family: Arial;
-    font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 26px;
     color: #000000;
     text-align: justify;
 }
-.second_page, .letter {
+.second_page .letter {
     position: absolute;
     width: 377px;
     height: 535px;
     right: 50px;
     top: 244px;
-    transition: 1s;
-} 
-.second_page, .letter:hover {
-    transform: scale(1.2)
+    background: url("./components/img/leter.png") center center/contain no-repeat
+    
 }
-.second_page, .benefit {
+.second_page .letter:hover {
+    transform: scale(1.2);
+    transition: 1s;
+}
+.second_page .benefit {
     position: absolute;
     width: 812px;
     height: 481px;
     left: 78px;
     top: 503px;
 }
-.second_page, .benefit, .benefit_head {
+.second_page .benefit .benefit_head {
     font-family: Arial;
     font-style: normal;
     font-weight: 500;
@@ -151,15 +162,21 @@
     text-align: center;
     text-decoration: underline;
 }
-.second_page, .benefit, .benefit_text {
+.second_page .benefit .benefit_text {
     font-family: Arial;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 26px;
     margin-top: 54px;
     text-align: justify;
 }
-.three_page, .three_page_head {
+.three_page {
+    min-height: 100vh;
+    background: url('./components/img/3.png') center center/cover no-repeat;
+    margin-top: 0;
+    z-index: -1;
+}
+.three_page .three_page_head {
     width: 32vw;
     height: auto;
     font-family: Arial;
@@ -170,5 +187,23 @@
     border: 2px solid #000000;
     border-radius: 25px;
     margin: 0 auto;
-    margin-top: 14%;
-} */
+    margin-top: 4%;
+}
+.three_page_text {
+    display: flex;
+    justify-content: space-between;
+    text-align: justify;
+    color: #000000;
+    font-family: Arial;
+    font-size: 36px;
+    margin-top: 27px;
+    height: 45vh;
+}
+.three_page_text .three_page_text_1 {
+    width: 571px;
+    
+}
+.three_page_text .three_page_text_2 {
+    width: 571px;
+    
+}
