--- a/client/src/main.css
+++ b/client/src/main.css
@@ -2,6 +2,13 @@
     margin: 0;
     padding: 0;
 }
+
+.main_page {
+    min-height: 100vh;
+    background: url('./components/img/main_bg_1.png') center center/cover no-repeat;
+    margin-top: 0;
+    z-index: -1;
+}
 .container {
     position: relative;
     width: 100%;
@@ -9,13 +16,8 @@
     margin: 0 auto;
     
 }
-.main_page {
-    min-height: 100vh;
-    background: url('./components/img/main_bg_1.png') center center/cover no-repeat;
-    margin-top: 0;
-    z-index: -1;
-}
 .navbar {
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -35,7 +37,7 @@
 
 .main_btn:hover {
     color: red;
-    padding-bottom: 1.1em;
+    padding-bottom: 0.1em;
     border-bottom: 0.1em solid red;
     transform: scale(1.2) ;
 }
@@ -103,7 +105,6 @@
     font-weight: 500;
 }
 .second_page {
-    position: relative;
     min-height: 950px;
     background: url('./components/img/2.png') center center/cover no-repeat;
     z-index: -1;
@@ -139,12 +140,13 @@
     height: 535px;
     right: 50px;
     top: 244px;
-    background: url("./components/img/leter.png") center center/contain no-repeat
-    
+    background: url("./components/img/leter.png") center center/contain no-repeat;
+    cursor: pointer;
 }
 .second_page .letter:hover {
     transform: scale(1.2);
     transition: 1s;
+    
 }
 .second_page .benefit {
     position: absolute;
@@ -191,7 +193,7 @@
 }
 .three_page_text {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: justify;
     color: #000000;
     font-family: Arial;
